// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project metadata renders correctly with no references 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="css-kq7hyf-sortOption"
        >
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                Stars
              </strong>
              : 
              123
            </span>
          </span>
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                Watchers
              </strong>
              : 
              0
            </span>
          </span>
        </div>
        <div
          class="css-kq7hyf-sortOption"
        >
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                <span>
                  Criticality score
                  <span
                    class="helptooltip css-hr1mel-wrapper"
                  >
                    <svg
                      alt="Documentation"
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-dl97ro-MuiSvgIcon-root-iconDefaults-HelpTooltip-muiTooltip-HelpTooltip"
                      data-mui-internal-clone-element="true"
                      data-testid="HelpIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
                      />
                    </svg>
                  </span>
                </span>
              </strong>
              : 
              0
            </span>
          </span>
        </div>
        <div
          class="css-kq7hyf-sortOption"
        />
        <div
          class="css-kq7hyf-sortOption"
        >
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                Open issues and PRs
              </strong>
              : 
              56
            </span>
          </span>
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                Contributors
              </strong>
              : 
              45
            </span>
          </span>
        </div>
        <div
          class="css-kq7hyf-sortOption"
        >
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                Date created
              </strong>
              : 
              2023-01-01
            </span>
          </span>
        </div>
        <div
          class="css-kq7hyf-sortOption"
        >
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                Last commit date
              </strong>
              : 
              2023-03-14
            </span>
          </span>
        </div>
        <div
          class="css-kq7hyf-sortOption"
        >
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                License
              </strong>
              : 
              MIT
            </span>
          </span>
        </div>
        <div
          class="css-kq7hyf-sortOption"
        >
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                Top Programming Language
              </strong>
              : 
              Python
            </span>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="css-kq7hyf-sortOption"
      >
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              Stars
            </strong>
            : 
            123
          </span>
        </span>
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              Watchers
            </strong>
            : 
            0
          </span>
        </span>
      </div>
      <div
        class="css-kq7hyf-sortOption"
      >
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              <span>
                Criticality score
                <span
                  class="helptooltip css-hr1mel-wrapper"
                >
                  <svg
                    alt="Documentation"
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-dl97ro-MuiSvgIcon-root-iconDefaults-HelpTooltip-muiTooltip-HelpTooltip"
                    data-mui-internal-clone-element="true"
                    data-testid="HelpIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
                    />
                  </svg>
                </span>
              </span>
            </strong>
            : 
            0
          </span>
        </span>
      </div>
      <div
        class="css-kq7hyf-sortOption"
      />
      <div
        class="css-kq7hyf-sortOption"
      >
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              Open issues and PRs
            </strong>
            : 
            56
          </span>
        </span>
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              Contributors
            </strong>
            : 
            45
          </span>
        </span>
      </div>
      <div
        class="css-kq7hyf-sortOption"
      >
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              Date created
            </strong>
            : 
            2023-01-01
          </span>
        </span>
      </div>
      <div
        class="css-kq7hyf-sortOption"
      >
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              Last commit date
            </strong>
            : 
            2023-03-14
          </span>
        </span>
      </div>
      <div
        class="css-kq7hyf-sortOption"
      >
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              License
            </strong>
            : 
            MIT
          </span>
        </span>
      </div>
      <div
        class="css-kq7hyf-sortOption"
      >
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              Top Programming Language
            </strong>
            : 
            Python
          </span>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Project metadata renders correctly with references 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="css-kq7hyf-sortOption"
        >
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                Stars
              </strong>
              : 
              123
            </span>
          </span>
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                Watchers
              </strong>
              : 
              0
            </span>
          </span>
        </div>
        <div
          class="css-kq7hyf-sortOption"
        >
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                <span>
                  Criticality score
                  <span
                    class="helptooltip css-hr1mel-wrapper"
                  >
                    <svg
                      alt="Documentation"
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-dl97ro-MuiSvgIcon-root-iconDefaults-HelpTooltip-muiTooltip-HelpTooltip"
                      data-mui-internal-clone-element="true"
                      data-testid="HelpIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
                      />
                    </svg>
                  </span>
                </span>
              </strong>
              : 
              0
            </span>
          </span>
        </div>
        <div
          class="css-kq7hyf-sortOption"
        >
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              76
               mentions in 
              <strong>
                algebraic geometry
              </strong>
               articles (
              42.42
               
              <span
                class="css-11uz4v6-nowrap"
              >
                relevance
                <span
                  class="helptooltip css-hr1mel-wrapper"
                >
                  <svg
                    alt="Documentation"
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-dl97ro-MuiSvgIcon-root-iconDefaults-HelpTooltip-muiTooltip-HelpTooltip"
                    data-mui-internal-clone-element="true"
                    data-testid="HelpIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
                    />
                  </svg>
                </span>
                )
              </span>
            </span>
          </span>
        </div>
        <div
          class="css-kq7hyf-sortOption"
        >
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                Open issues and PRs
              </strong>
              : 
              56
            </span>
          </span>
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                Contributors
              </strong>
              : 
              45
            </span>
          </span>
        </div>
        <div
          class="css-kq7hyf-sortOption"
        >
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                Date created
              </strong>
              : 
              2023-01-01
            </span>
          </span>
        </div>
        <div
          class="css-kq7hyf-sortOption"
        >
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                Last commit date
              </strong>
              : 
              2023-03-14
            </span>
          </span>
        </div>
        <div
          class="css-kq7hyf-sortOption"
        >
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                License
              </strong>
              : 
              MIT
            </span>
          </span>
        </div>
        <div
          class="css-kq7hyf-sortOption"
        >
          <span
            class="css-1xpyfpg-metaSection"
          >
            <span>
              <strong>
                Top Programming Language
              </strong>
              : 
              Python
            </span>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="css-kq7hyf-sortOption"
      >
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              Stars
            </strong>
            : 
            123
          </span>
        </span>
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              Watchers
            </strong>
            : 
            0
          </span>
        </span>
      </div>
      <div
        class="css-kq7hyf-sortOption"
      >
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              <span>
                Criticality score
                <span
                  class="helptooltip css-hr1mel-wrapper"
                >
                  <svg
                    alt="Documentation"
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-dl97ro-MuiSvgIcon-root-iconDefaults-HelpTooltip-muiTooltip-HelpTooltip"
                    data-mui-internal-clone-element="true"
                    data-testid="HelpIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
                    />
                  </svg>
                </span>
              </span>
            </strong>
            : 
            0
          </span>
        </span>
      </div>
      <div
        class="css-kq7hyf-sortOption"
      >
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            76
             mentions in 
            <strong>
              algebraic geometry
            </strong>
             articles (
            42.42
             
            <span
              class="css-11uz4v6-nowrap"
            >
              relevance
              <span
                class="helptooltip css-hr1mel-wrapper"
              >
                <svg
                  alt="Documentation"
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-dl97ro-MuiSvgIcon-root-iconDefaults-HelpTooltip-muiTooltip-HelpTooltip"
                  data-mui-internal-clone-element="true"
                  data-testid="HelpIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
                  />
                </svg>
              </span>
              )
            </span>
          </span>
        </span>
      </div>
      <div
        class="css-kq7hyf-sortOption"
      >
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              Open issues and PRs
            </strong>
            : 
            56
          </span>
        </span>
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              Contributors
            </strong>
            : 
            45
          </span>
        </span>
      </div>
      <div
        class="css-kq7hyf-sortOption"
      >
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              Date created
            </strong>
            : 
            2023-01-01
          </span>
        </span>
      </div>
      <div
        class="css-kq7hyf-sortOption"
      >
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              Last commit date
            </strong>
            : 
            2023-03-14
          </span>
        </span>
      </div>
      <div
        class="css-kq7hyf-sortOption"
      >
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              License
            </strong>
            : 
            MIT
          </span>
        </span>
      </div>
      <div
        class="css-kq7hyf-sortOption"
      >
        <span
          class="css-1xpyfpg-metaSection"
        >
          <span>
            <strong>
              Top Programming Language
            </strong>
            : 
            Python
          </span>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
